# analyze_signal

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.cfg
backend/app/: main.py
backend/app/api/: routers.py
backend/app/api/endpoints/: analyze_signal.py
backend/app/models/analyze_signal/: request.py  response.py
backend/app/services/: analyze_signal.py
backend/tests/integration/api/: test_analyze_signal.py
backend/tests/unit/models/: test_analyze_signal.py
backend/tests/unit/services/: test_analyze_signal.py
frontend/: .env.example  .eslintrc.js  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/hooks/: useSignalAnalysis.ts
frontend/src/pages/SignalAnalyzer/: SignalAnalyzer.styled.tsx  SignalAnalyzer.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/shared/InputField/: InputField.styled.tsx  InputField.tsx
frontend/src/shared/ResultCard/: ResultCard.styled.tsx  ResultCard.tsx  index.ts
frontend/src/shared/SubmitButton/: SubmitButton.styled.tsx  SubmitButton.tsx  index.ts
frontend/src/tests/integration/signalAnalysis/: App.test.tsx
frontend/src/tests/unit/InputField/: InputField.test.tsx
frontend/src/tests/unit/ResultCard/: ResultCard.test.tsx
frontend/src/tests/unit/SignalAnalyzer/: SignalAnalyzer.test.tsx
frontend/src/tests/unit/SubmitButton/: SubmitButton.test.tsx
frontend/src/types/: enums.ts  index.ts
frontend/src/utils/: inputParser.ts
(+2 files in other folders)
